--- a/_posts/2016-04-25-dl-for-mt.markdown
+++ b/_posts/2016-04-25-dl-for-mt.markdown
@@ -125,7 +125,7 @@ NPLM 就不同了，它的学习不涉及计数，只根据上下文，并且利
 文中提到 NMT 让机器翻译领域面目全非，其实不只是机器翻译，是整个自然语言处理领域。博主目测现在自然语言处理只剩下两种任务<br/>
 <li>被深度学习攻克了的</li>
 <li>即将被深度学习攻克的</li>
-笔者参加的学术活动不多，但每次参与学术活动，都会遇到一些学术界大小BOSS争论深度学习在自然语言处理中的前景。不知道二十几年前统计方法慢慢统治自然语言处理的时候，当时的学者是否也如此争论过。但是不得不说，统计方法走了十几、二十年的路才在自然语言处理任务中扎根并发扬光大，而深度学习如同暴风雨一般，一夜之间席卷一切。以统计机器翻译为例：走过了十年黄金期积累下来的各种复杂模型和理论，效果却不及提出仅两年的 NMT 端到端模型，难免让一些“恋旧”的学者伤心。统计机器翻译甚至还没有来得及打败更早实现的“基于人工规则的机器翻译”，就要走入寒冬了。博主的男神<a href="http://nlp.csai.tsinghua.edu.cn/~ly/" target="_blank">刘洋老师是国内统计机器翻译领域的领军人物，现在也积极投入 NMT 的研究中，让博主十分欣慰。哦对了，面目全非的意思就是，一时间，在顶级会议论文集里面找不到 SMT 的论文了。。。
+笔者参加的学术活动不多，但每次参与学术活动，都会遇到一些学术界大小BOSS争论深度学习在自然语言处理中的前景。不知道二十几年前统计方法慢慢统治自然语言处理的时候，当时的学者是否也如此争论过。但是不得不说，统计方法走了十几、二十年的路才在自然语言处理任务中扎根并发扬光大，而深度学习如同暴风雨一般，一夜之间席卷一切。以统计机器翻译为例：走过了十年黄金期积累下来的各种复杂模型和理论，效果却不及提出仅两年的 NMT 端到端模型，难免让一些“恋旧”的学者伤心。统计机器翻译甚至还没有来得及打败更早实现的“基于人工规则的机器翻译”，就要走入寒冬了。博主的男神<a href="http://nlp.csai.tsinghua.edu.cn/~ly/" target="_blank">刘洋</a>老师是国内统计机器翻译领域的领军人物，现在也积极投入 NMT 的研究中，让博主十分欣慰。哦对了，面目全非的意思就是，一时间，在顶级会议论文集里面找不到 SMT 的论文了。。。
 <br />
 <h3>Bengio 团队</h3>
 Bengio 是深度学习应用在自然语言处理任务的带头人之一，NMT的论文，Bengio 团队是主要的输出。不过斯坦福的 Manning 团队以其深厚的自然语言处理功底，应该会赶超的，加油。
